stateDiagram-v2
  [*] --> Drafted
  ChargeAssessment --> DecisionDrafting
  ChargeAssessment --> SearchPlanning
  ChargeAssessment --> Searching
  ChargeAssessment --> Withdrawn
  DecisionApproved --> Refused
  DecisionApproved --> ReleasedInFull
  DecisionApproved --> ReleasedInPart
  DecisionDrafting --> HumanDecisionRequired
  DocumentsIdentified --> ConsultationRequired
  DocumentsIdentified --> DecisionDrafting
  DocumentsIdentified --> HumanDecisionRequired
  Drafted --> Submitted
  Drafted --> Withdrawn
  ExtensionApplied --> ConsultationRequired
  ExtensionApplied --> DecisionDrafting
  ExtensionApplied --> DocumentsIdentified
  ExtensionApplied --> HumanDecisionRequired
  ExtensionApplied --> SearchPlanning
  ExtensionApplied --> Searching
  HumanDecisionRequired --> DecisionApproved
  Received --> Acknowledged
  Received --> AwaitingClarification
  Received --> ChargeAssessment
  Received --> ExtensionApplied
  Received --> SearchPlanning
  Received --> TransferredInFull
  Received --> ValidityChecking
  Received --> Withdrawn
  SearchPlanning --> ConsultationRequired
  SearchPlanning --> Searching
  Searching --> ChargeAssessment
  Searching --> ConsultationRequired
  Searching --> DocumentsIdentified
  Searching --> ExtensionApplied
  Searching --> NoDocumentsFound
  Submitted --> AwaitingClarification
  Submitted --> Received
  Closed --> [*]
  NoDocumentsFound --> [*]
  Refused --> [*]
  ReleasedInFull --> [*]
  ReleasedInPart --> [*]
  Withdrawn --> [*]
